# Faculty

./: MainWindow.py  config.py  database.py  employee_system.db  history_db.py  main.py  main.ui  pyvenv.cfg  requirements.txt  style.qss  test.py  Отчет по UI.docx
models/: employeer.py
routes/: employeer.py
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
schemas/: employeer.py
services/: history_service.py
tabs/: employees_tab.py  history_tab.py  publications_tab.py
