[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 =  { version = "0.20", features = ["extension-module"] }
fuzzy-matcher = "0.3"
